--- a/java/style.css
+++ b/java/style.css
@@ -18,13 +18,34 @@ body{
 
 
 .container{
-    width : 90%;
+    width : 100%;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
+.boxName{
+    padding: 1.5%;
+    margin-left: 2rem;
+    margin-top: 2rem;
+    float: left;
+    border: 1px solid black ;
+    text-align: center;
+}
+.imgAgent{
+    width: 25%;
+    float: right;
+}
+.listeEquipement{
+    display: flex;
+    justify-items: center;
+    align-items: center;
+    flex-direction: column;
+}
+.Equipement{
+    padding: 10px;
+}
 .listeAgents{
     width : 30%;
     height: auto;
