--- a/java/style.css
+++ b/java/style.css
@@ -30,7 +30,7 @@ body{
     margin-left: 2rem;
     margin-top: 2rem;
     float: left;
-    border: 1px solid black ;
+    border: 1px solid #659224 ;
     text-align: center;
 }
 .imgAgent{
@@ -38,6 +38,7 @@ body{
     float: right;
 }
 .listeEquipement{
+
     display: flex;
     justify-items: center;
     align-items: center;
